fix: remove padding from submit btn on mobile

--- a/src/styles/_langselector.scss
+++ b/src/styles/_langselector.scss
@@ -180,6 +180,7 @@ $border-col: rgba(229,231,235, 1);
         margin-top: 8px;
         margin-left: 0;
         font-size: 14px;
+        padding-right: 0px;
       }
     }
 
